--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
         "@testing-library/react": "^11.2.5",
         "@testing-library/user-event": "^12.8.1",
         "axios": "^0.21.1",
-        "bootstrap": "^5.0.1",
+        "bootstrap": "^4.6.0",
+        "firebase": "^8.6.1",
+        "particles-bg": "^2.5.5",
         "react": "^17.0.1",
+        "react-bootstrap": "^1.6.0",
         "react-dom": "^17.0.1",
+        "react-firebaseui": "^5.0.2",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "styled-components": "^5.3.0",
         "web-vitals": "^1.1.0"
     },
     "scripts": {
-
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
