--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
         "axios": "^0.21.1",
         "bootstrap": "^4.6.0",
         "firebase": "^8.6.1",
+        "google-maps-react": "^2.0.6",
         "particles-bg": "^2.5.5",
         "react": "^17.0.1",
         "react-bootstrap": "^1.6.0",
         "react-dom": "^17.0.1",
         "react-firebaseui": "^5.0.2",
+        "react-google-maps": "^9.4.5",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "styled-components": "^5.3.0",
