--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "react-dom": "^17.0.1",
         "react-firebaseui": "^5.0.2",
         "react-google-maps": "^9.4.5",
+        "react-image-gallery": "^1.0.10",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "styled-components": "^5.3.0",
@@ -48,6 +49,7 @@
         ]
     },
     "devDependencies": {
-        "gh-pages": "^3.1.0"
+        "gh-pages": "^3.1.0",
+        "react-social-icons": "^5.4.0"
     }
 }
